[tool.poetry]
name = "prometheus"
version = "0.0.1"
description = ""
authors = ["Zack Field <field.zackery@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.2"
openai = "^1.13.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
